--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,7 +16,7 @@ $border-radius-5: 10px;
 $primary-clr: #1b2e40;
 $primary-clr-2: #003d5c;
 $primary-clr-3: hsla(200, 80%, 35%, 0.753);
-$primary-clr-trans: #1b2e40b7;
+$primary-clr-trans: #1b2e40c2;
 $primary-clr-trans-2: #202e3cb7;
 $primary-clr-dark: hsl(200, 70%, 10%);
 $primary-clr-light: #9dadef;
